--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ script:
   - sudo sh test/travis_ci_scripts/travis_ci_build_script.sh
   - python -m unittest discover
 after_success:
-  - sudo sh test/travis_ci_scripts/upload_nebula_script.sh
+  - chmod +x test/travis_ci_scripts/upload_nebula_script.sh
+  - test/travis_ci_scripts/upload_nebula_script.sh
 
